--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -12,7 +12,7 @@
   top: 85px;
   left: 260px;
   font-size: 48px;
-  font-weight: 700;
+  font-family: monserrat-bold;
   position: absolute;
 }
 
@@ -21,5 +21,5 @@
   height: 100%;
   border-radius: 25px;
   object-fit: cover;
-  opacity: 0.6;
+  opacity: 0.5;
 }
