--- a/src/pages/reset.css
+++ b/src/pages/reset.css
@@ -41,3 +41,20 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+@font-face {
+  font-family: monserrat-regular;
+  src: url('/public/fonts/Montserrat-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: monserrat-medium;
+  src: url('/public/fonts/Montserrat-Medium.ttf') format('truetype');
+}
+@font-face {
+  font-family: monserrat-bold;
+  src: url('/public/fonts/Montserrat-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: Monserrat-extrabold;
+  src: url('/public/fonts/Montserrat-ExtraBold.ttf') format('truetype');
+}
