--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,32 +1,44 @@
 .card {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  width: 340px;
-  height: 340px;
-  margin: 28px;
-  background: rgb(255, 97, 97);
+  align-items: flex-end;
+  position: relative;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1/1;
+  overflow: hidden;
+  text-decoration: none;
+}
+.card:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(
     180deg,
-    rgba(255, 97, 97, 1) 75%,
-    rgba(203, 77, 77, 1) 100%
+    rgba(255, 255, 255, 0) 0%,
+    rgba(0, 0, 0, 0.5) 100%
   );
-  border-radius: 10px;
-  list-style: none;
 }
 
 .card img {
-  width: 295px;
-  height: 235px;
-  margin-left: 22.5px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  border-radius: 10px 10px 5px 5px;
+  border-radius: 10px;
 }
 
 .card .infos {
-  width: 300px;
-  height: 37px;
-  margin-left: 22.5px;
+  position: relative;
+  z-index: 5;
+  margin: 20px;
   color: white;
   font-size: 18px;
+}
+
+@media (max-width: 768px) {
+  .card {
+    aspect-ratio: 2/1.52;
+  }
 }
