--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,13 +3,10 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  max-width: 1240px;
+  max-width: 1280px;
   margin-top: 50px;
-}
-
-.header img {
-  width: 210px;
-  height: 68px;
+  box-sizing: border-box;
+  padding: 0 20px;
 }
 
 .nav-bar ul {
@@ -21,8 +18,24 @@
 .nav-bar a {
   color: black;
   text-decoration: none;
+  font-size: 24px;
 }
 
 .nav-bar ul a.active {
   text-decoration: underline;
  }
+
+@media (max-width: 768px) {
+  .header svg {
+    width: 145px;
+    height: 46.88px;
+  }
+
+  .nav-bar a {
+    font-size: 12px;
+  }
+  
+  .nav-bar ul {
+    gap: 26px;
+  }
+}
