--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,7 +1,38 @@
-.home{
+.home {
   display: flex;
   align-items: center;
   flex-direction: column;
-  font-family: monserrat-medium;
+  width: 100%;
   gap: 50px;
+  box-sizing: border-box;
+  padding: 0 20px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 2rem;
+  grid-row-gap: 2rem;
+  padding: 50px 50px;
+  max-width: 1140px;
+  background: #f6f6f6;
+  border-radius: 25px;
+}
+
+@media (max-width: 1200px) {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .home {
+    gap: 25px;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(1, 1fr);
+    background: white;
+    padding: 0;
+  }
 }
