--- a/src/pages/notFound/notFound.css
+++ b/src/pages/notFound/notFound.css
@@ -2,8 +2,10 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  font-family: monserrat-medium;
+  width: 100%;
   gap: 50px;
+  box-sizing: border-box;
+  padding: 0 20px;
 }
 
 .not-found h2 {
@@ -22,4 +24,29 @@
   margin: 85px 0 90px 0;
   color: black;
   font-size: 18px;
+}
+
+@media (max-width: 1200px) {
+  .not-found .text {
+    white-space: pre-line;
+    text-align: center;
+  }
+
+  .line-break {
+    display: block;
+  }
+}
+
+@media (max-width: 768px) {
+  .not-found h2 {
+    font-size: 95px;
+  }
+
+  .not-found .text {
+    font-size: 18px;
+  }
+
+  .not-found a {
+    font-size: 14px;
+  }
 }
